horde/themes/screen.css
/* ... */
#color-picker .south img {
    height: 100%;
    width: 100%;
    position: relative;
    top: -8px;
    left: -1px;
}
#color-picker #color-picker-cursor {
    background: url("graphics/color-picker-cursor.gif") no-repeat;
    position: absolute;
    height: 9px;
    width: 9px;
    z-index: 101;
}
#color-picker #color-picker-cursor img {
    height: 100%;
    width: 100%;
    position: relative;
    top: -8px;
    left: -1px;
}
#color-picker #color-picker-hex {
    padding: 5px 0 4px 7px;
    cursor: text;
    float: left;
}
#color-picker #color-picker-hex:hover {
    color: #fff;
}
#color-picker #color-picker-resize {
    float: right;
    top: -14px;
    left: 7px;
    height: 14px;
    width: 14px;
    cursor: se-resize;
}
#color-picker #color-picker-sphere {
    height: 128px;
    width: 128px;
}
.color-picker-palette-src {
    background-image: url("graphics/color-picker-palette.png");
}
.color-picker-resize-src {
    background-image: url("graphics/color-picker-resize.gif");
}

.leftAlign {
    text-align: left;
}
.rightAlign {
    text-align: right;
}
.leftFloat {
    float: left;
}
.rightFloat {
    float: right;
}

.toggleQuoteHide, .toggleQuoteShow {
    font-size: 80%;
    cursor: pointer;
    background: #ddd;
}
.toggleQuoteHide:hover, .toggleQuoteShow:hover {
    text-decoration: underline;
}
.toggleQuoteParent {
    margin-bottom: 8px;
}

/* SpellChecker styles. */
.spellcheckChecking, .spellcheckIncorrect {
    color: #f00;
}
.spellcheckIncorrect, .spellcheckCorrected {
    text-decoration: underline;
    cursor: pointer;
}
.spellcheckCorrected {
    color: #090;
}

/* KeyNavList styling. */
.KeyNavList {
    background: #f4f4f4;
    border: 1px solid #d4d4d4;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 2px;
    position: absolute;
}
.KeyNavList ul {
    list-style-type: none;
    padding: 1px;
}
.KeyNavList ul li {
    cursor: pointer;
    color: #000;
    padding: 3px;
    white-space: nowrap;
}
.KeyNavList ul li.selected {
    background: gray;
    color: #fff;
}
.KeyNavList ul li:hover, .KeyNavList ul li.selected:hover {
    background: lightgrey;
    color: #fff;
}

/* Growler notice styling. */
#Growler {
    width: 340px;
}
#Growler div.GrowlerNotice {
    filter: alpha(opacity=80);
    -moz-opacity: .8;
    opacity: .8;
    zoom: 1;
    width: 300px;
    padding: 10px 10px 10px 25px;
    margin: 5px auto;
    text-align: left;
    display: none;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    min-height: 20px;
    border-width: 1px;
    border-style: solid;
    background-position: 3px center;
    background-repeat: no-repeat;
    color: #fff;
}
#Growler div.GrowlerNoticeHead {
    font-weight: bold;
}
#Growler div.horde-error, #GrowlerLog li.horde-error {
    background-image: url("graphics/alerts/error.png");
}
#Growler div.horde-error div.GrowlerNoticeBody {
    padding-right: 15px;
}
#Growler div.horde-message, #GrowlerLog li.horde-message {
    background-image: url("graphics/alerts/message.png");
}
#Growler div.horde-success, #GrowlerLog li.horde-success  {
    background-image: url("graphics/alerts/success.png");
}
#Growler div.horde-warning, #GrowlerLog li.horde-warning {
    background-image: url("graphics/alerts/warning.png");
}
#Growler div.horde-alarm, #GrowlerLog li.horde-alarm {
    background-image: url("graphics/alerts/alarm.png");
}
#GrowlerLog {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    max-height: 200px;
    z-index: 10000;
    overflow-y: auto;
}
#GrowlerLog ul {
    overflow: auto;
    filter: alpha(opacity=90);
    -moz-opacity: .9;
    opacity: .9;
}
#GrowlerLog ul li {
    color: #333;
    font-size: 12px;
    list-style-type: none;
    overflow: hidden;
    padding: 10px 30px;
    border-bottom: 1px dotted;
    background-position: 3px center;
    background-repeat: no-repeat;
}
#GrowlerLog ul li:last-child {
    border: 0;
}
#GrowlerLog li.NoAlerts {
    font-weight: bold;
    background: #999;
}
#GrowlerLog span.alertdate {
    font-size: 90%;
    font-style: italic;
    padding-left: 10px;
}
div.GrowlerNoticeExit {
    float: right;
    font-weight: bold;
    cursor: pointer;
}
div.GrowlerNoticeExit:hover {
    color: #444;
}
.horde-message, .horde-success, .horde-warning, .horde-error {
    border-color: #316600;
    background-color: #5db110;
    color: #fff;
}
.horde-error {
    background-color: #e81222;
    border-color: maroon;
}
.horde-warning {
    background-color: #ebe20c;
    border-color: #807b00;
}
.horde-warning, #Growler div.horde-warning {
    color: #000;
}
.horde-message {
    background-color: #369;
}
.horde-alarm {
    background-color: orange;
    border-color: red;
}

.hordeACBox {
    background:white none repeat scroll 0 0;
    border:1px solid #666699;
    cursor:default;
    /*overflow:hidden;*/
    text-align:left;
    min-height: 58px;
}
.hordeACList {
    display:block;
    overflow:hidden;
    width:100%;
    cursor:default;
    list-style-type:none;
    margin:0;
    padding:0;
}
.hordeACListMember {
    display:inline-block;
    font-size:90%;
    padding:2px 1px 1px 2px;
    height: 17px;
    white-space:nowrap;
}
.hordeACListItem {
    background-color:lightblue;
    border:1px solid #C0C0C0;
    -moz-border-radius-bottomleft:4px;
    -moz-border-radius-bottomright:4px;
    -moz-border-radius-topleft:4px;
    -moz-border-radius-topright:4px;
    margin:5px;
}
.hordeACTrigger, .hordeACTrigger:focus {
    background:transparent none repeat scroll 0 0;
    border:0 none;
    display:inline;
    position:static;
    width:80px;
}
/*.hordeACContainer {
    height:18px;
    margin:2px;
    padding:2px 2px 2px 0;
}*/
.hordeACItemRemove:hover {
    cursor:pointer;
}

/* Horde_Mime_Viewer styles. */
.mimeHeaders {
    border: 1px solid #ccc;
    background: #f9f9f9;
    display: -moz-inline-stack;
    display: inline-block;
    margin-bottom: 3px;
    padding: 5px;
}
/* ... */

